--- a/uiproj.html
+++ b/uiproj.html
@@ -6,7 +6,7 @@
     <body>
         <h1 id="main-title">Zachery Peterson - Web Dev/Designer and UI/UX Designer</h1>
         <nav id="navbar">
-            <li class="nav-item"><a href="home.html">Home/Bio</a></li>
+            <li class="nav-item"><a href="index.html">Home/Bio</a></li>
             <li class="nav-item"><a href="webproj.html">Web Projects</a></li>
             <li class="nav-item"><a href="uiproj.html">UI/UX Projects</a></li>
             <li class="nav-item"><a href="designproj.html">Design Projects</a></li>
