--- a/webproj.html
+++ b/webproj.html
@@ -4,17 +4,21 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
-    <body class="index-body">
-        <!-- <nav id="navbar">
-            <li class="nav-item"><a href="index.html">Home/Bio</a></li>
+    <body>
+        <h1 id="main-title">Zachery Peterson - Web Dev/Designer and UI/UX Designer</h1>
+        <nav id="navbar">
+            <!-- <li class="nav-item"><a href="index.html">Home</a></li> -->
+            <li class="nav-item"><a href="bio.html">Bio</a></li>
             <li class="nav-item"><a href="webproj.html">Web Projects</a></li>
             <li class="nav-item"><a href="uiproj.html">UI/UX Projects</a></li>
             <li class="nav-item"><a href="designproj.html">Design Projects</a></li>
-        </nav> -->
-        <div id="home-icon" class="home-icon">
-            <!-- <a href="bio.html">Click to go to site.</a> -->
-            <!-- <img src="cool.jpg"></img> -->
+        </nav>
+        <!-- <div id="spacer"></div> -->
+        <div id="container">
+            Filler Info
         </div>
-        <script src="script.js"></script>
     </body>
+    <footer>
+        <div>&copy; Zachery Peterson</div>
+    </footer>
 </HTML>
