--- a/designproj.html
+++ b/designproj.html
@@ -5,14 +5,11 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
-        <h1 id="main-title">Zachery Peterson - Web Dev/Designer and UI/UX Designer</h1>
-        <nav id="navbar">
-            <!-- <li class="nav-item"><a href="index.html">Home</a></li> -->
-            <!-- <li class="nav-item"><a href="bio.html">Bio</a></li>
-            <li class="nav-item"><a href="webproj.html">Web Projects</a></li>
-            <li class="nav-item"><a href="uiproj.html">UI/UX Projects</a></li>
-            <li class="nav-item"><a href="designproj.html">Design Projects</a></li> -->
-        </nav>
+        <div class="title-container">
+            <h1 id="main-title">Zachery Peterson - Web Dev/Designer and UI/UX Designer</h1>
+            <nav id="navbar">
+            </nav>
+        </div>
         <!-- <div id="spacer"></div> -->
         <div id="parent-container">
             <div id="container">
