--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <!-- <a href="bio.html">Click to go to site.</a> -->
             <!-- <img src="cool.jpg"></img> -->
         </div>
+        <p id="instruction">Click Me</p>
         <script src="script.js"></script>
     </body>
 </HTML>
