--- a/designproj.html
+++ b/designproj.html
@@ -11,8 +11,8 @@
             </nav>
         </div>
         <!-- <div id="spacer"></div> -->
-        <div id="parent-container">
-            <div id="container">
+        <div id="parent-proj-container">
+            <div id="proj-container">
                 <div class="proj-picture">
                     <div class="content">
                         <img src="SpoofProd.png"></img>
@@ -24,6 +24,19 @@
                         </div>
                     </div>
                 </div>
+                <div class="proj-picture">
+                    <div class="proj-info">
+                        <h2 class="proj-title">Zombified Person</h2>
+                        <div class="description">
+                            This is a zombified version of the actor Jensen Ackles.  This was one of the first projects I did in Photoshop.
+                        </div>
+                    </div>
+                    <div class="content">
+                        <img src="zombified_jensen.jpg" height="189" width="252"></img>
+                    </div>
+                </div>
+            </div>
+            <div id="proj-container">
                 <div class="proj-video">
                     <div class="content video-content">
                         <video controls>
@@ -37,17 +50,19 @@
                         </div>
                     </div>
                 </div>
+                <div class="proj-spacer"></div>
             </div>
-            <div id="contianer-two">
-                <div class="proj-picture">
-                    <div class="proj-info">
-                        <h2 class="proj-title">Zombified Person</h2>
-                        <div class="description">
-                            This is a zombified version of the actor Jensen Ackles.  This was one of the first projects I did in Photoshop.
-                        </div>
-                    </div>
+            <div id="proj-container">
+                <div class="proj-spacer"></div>
+                <div class="proj-picture-big">
                     <div class="content">
-                        <img src="zombified_jensen.jpg" height="189" width="252"></img>
+                        <img src="my-bootstrap.JPG" height="237.5" width="476"></img>
+                    </div>
+                    <div class="proj-info">
+                        <h2 class="proj-title">Custom CSS framework</h2>
+                        <div class="description">
+                            This is the beta version of a custom CSS framework I made in my front end implementation class.
+                        </div>
                     </div>
                 </div>
             </div>
