--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
             <li class="nav-item"><a href="designproj.html">Design Projects</a></li>
         </nav> -->
         <div id="home-icon" class="home-icon">
-            <!-- <a href="bio.html">Click to go to site.</a> -->
-            <!-- <img src="cool.jpg"></img> -->
+            <img class="home-logo" src="logo.png"></img>
         </div>
-        <p id="instruction">Click Me</p>
+        <!-- <p id="instruction">Click Me</p> -->
         <script src="script.js"></script>
     </body>
 </HTML>
