--- a/designproj.html
+++ b/designproj.html
@@ -6,9 +6,11 @@
     </head>
     <body>
         <div class="title-container">
+            <div class="title-logo-container">
+                <img class="title-logo" src="logo.png"></img>
+            </div>
             <h1 id="main-title">Zachery Peterson - Web Dev/Designer and UI/UX Designer</h1>
-            <nav id="navbar">
-            </nav>
+            <nav id="navbar"></nav>
         </div>
         <!-- <div id="spacer"></div> -->
         <div id="parent-proj-container">
