updated pages and styles, also got rid of unecessary files

--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,24 @@
     </head>
     <body>
         <div class="title-container">
+            <div class="title-logo-container">
+                <img class="title-logo" src="logo.png"></img>
+            </div>
             <h1 id="main-title">Zachery Peterson - Web Dev/Designer and UI/UX Designer</h1>
             <nav id="navbar">
             </nav>
         </div>
-        <!-- <div id="green"></div>
-        <div id="purple"></div> -->
+        <div id="contact-container">
+            <div class="contact-info">
+                <div>*possible text*</div>
+                <h2>Contact Info: </h2>
+                <ul class="contact-list">
+                    <li class="contact-list-item">LinkedIn: Filler<a></a></li>
+                    <li class="contact-list-item">Phone:  612-296-7640</li>
+                    <li class="contact-list-item">Email:  zachrp2296@gmail.com</li>
+                </ul>
+            </div>
+        </div>
     </body>
     <footer>
         <div>&copy; Zachery Peterson</div>
