--- a/designproj.html
+++ b/designproj.html
@@ -9,7 +9,7 @@
             <div class="title-logo-container">
                 <img class="title-logo" src="logo.png"></img>
             </div>
-            <h1 id="main-title">Zachery Peterson - Web Dev/Designer and UI/UX Designer</h1>
+            <h1 id="main-title">Zachery Peterson - Web Developer and Designer</h1>
             <nav id="navbar"></nav>
         </div>
         <!-- <div id="spacer"></div> -->
